[package]
name = "tlog"
description = "A debug library which writes logs into file."
documentation = "https://docs.rs/tlog/"
version = "0.1.3"
edition = "2021"
authors = ["Hugo Wang <w@mitnk.com>"]
repository = "https://github.com/mitnk/tlog"
license = "MIT"

[dependencies]
libc = "0.2.0"

[dependencies.time]
version = "0.3.0"
features = ["local-offset"]
